log
Fri 05 May 2023 04:08:25 AM UTC: 
 tests:  0|5
total_score: 0/70
9167638
Fri 05 May 2023 04:13:59 AM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:7: error: unused variable ‘idx’ [-Werror=unused-variable]
   57 |   int idx[2] = {0, 0};
      |       ^~~
sudoku.c:56:7: error: unused variable ‘j’ [-Werror=unused-variable]
   56 |   int j;
      |       ^
sudoku.c:55:7: error: unused variable ‘i’ [-Werror=unused-variable]
   55 |   int i;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
61b48cf
Fri 05 May 2023 04:18:13 AM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|5
total_score: 0/70
10890a2
Fri 05 May 2023 04:20:03 AM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
779f8fe
Fri 05 May 2023 04:25:33 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:77:11: error: unused variable ‘adj_node’ [-Werror=unused-variable]
   77 |     Node* adj_node = copy(n);
      |           ^~~~~~~~
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
352882d
Fri 05 May 2023 04:29:18 AM UTC: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
In file included from test.c:5:
sudoku.c:54:9: error: unused variable ‘list’ [-Werror=unused-variable]
   54 |   List* list = createList();
      |         ^~~~
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2e278fb
Fri 05 May 2023 04:29:50 AM UTC: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
3a32201
Fri 05 May 2023 04:32:49 AM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|5
total_score: 5/70
7a8effc
Fri 05 May 2023 04:33:19 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   61 |     return;
      |     ^~~~~~
sudoku.c:52:7: note: declared here
   52 | List* get_adj_nodes(Node* n)
      |       ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dcb7ff3
Fri 05 May 2023 04:33:31 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
7b10b85
Fri 05 May 2023 04:39:00 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:74:9: error: ‘found’ undeclared (first use in this function)
   74 |         found = 1;
      |         ^~~~~
sudoku.c:74:9: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:58:7: error: unused variable ‘encuentra’ [-Werror=unused-variable]
   58 |   int encuentra = 0;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ef834dc
